apps/base/calibre/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: calibre-server
#   namespace: calibre
# spec:
#   selector:
#     app: calibre-server
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
